k8s/fastapi_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  selector:
    name: fastapi
  type: ClusterIP
  ports:
  - name: api
    port: 8000
    targetPort: 8000
    protocol: TCP
