k8s/frontend_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    name: frontend
  type: ClusterIP
  ports:
  - name: api
    port: 3000
    targetPort: 3000
    protocol: TCP
