k8s/http-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routes
spec:
  parentRefs:
    - name: main-gateway
  rules:
    - matches:
        - path:
           type: PathPrefix
           value: /api
      backendRefs:
        - name: fastapi
          port: 8000

    - matches:
        - path:
           type: PathPrefix
           value: /
      backendRefs:
        - name: frontend
          port: 3000
